[project]
name = "marker-pdf"
version = "0.3.9"
description = "Convert PDF to markdown with high speed and accuracy."
authors = [{ name = "Vik Paruchuri", email = "github@vikas.sh" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
repository = { url = "https://github.com/VikParuchuri/marker" }
keywords = ["pdf", "markdown", "ocr", "nlp"]

requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "transformers>=4.45.2",
    "python-dotenv>=1.0.0",
    "torch>=2.4.1",
    "tqdm>=4.66.1",
    "tabulate>=0.9.0",
    "ftfy>=6.1.1",
    "texify>=0.2.0",
    "rapidfuzz>=3.8.1",
    "filetype>=1.2.0",
    "regex>=2024.4.28",
    "pdftext>=0.3.17",
    "tabled-pdf>=0.1.4",
    "surya-ocr",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0.0", "datasets>=2.21.0", "streamlit>=1.37.1"]

[project.scripts]
marker = "convert:main"
marker_single = "convert_single:main"
marker_chunk_convert = "chunk_convert:main"
marker_gui = "run_marker_app:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marker"]

[tool.hatch.build.targets.sdist]
include = [
    "convert.py",
    "convert_single.py",
    "chunk_convert.sh",
    "chunk_convert.py",
    "marker_app.py",
    "run_marker_app.py",
]

[tool.uv.sources]
surya-ocr = { git = "https://github.com/village-dev/surya.git" }
