[project]
name = "marker-pdf"
version = "1.1.0"
description = "Convert PDF to markdown with high speed and accuracy."
authors = [{ name = "Vik Paruchuri", email = "github@vikas.sh" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
repository = { url = "https://github.com/VikParuchuri/marker" }
keywords = ["pdf", "markdown", "ocr", "nlp"]

requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "transformers>=4.45.2",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "tabulate>=0.9.0",
    "ftfy>=6.1.1",
    "rapidfuzz>=3.8.1",
    "filetype>=1.2.0",
    "regex>=2024.4.28",
    "tabled-pdf>=0.1.4",
    "loguru>=0.7.2",
    "pdftext>=0.3.19",
    "surya-ocr",
    "texify>=0.2.1",
    "pikepdf>=9.4.0",
    "google-re2>=1.1.20240702",
    "markdownify>=0.13.1",
]

[project.scripts]
marker = "convert:main"
marker_single = "convert_single:main"
marker_chunk_convert = "chunk_convert:main"
marker_gui = "run_marker_app:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marker"]

[tool.hatch.build.targets.sdist]
include = [
    "convert.py",
    "convert_single.py",
    "chunk_convert.sh",
    "chunk_convert.py",
    "marker_app.py",
    "run_marker_app.py",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "datasets>=2.21.0",
    "streamlit>=1.37.1",
    "ipykernel>=6.29.5",
    "py-spy>=0.4.0",
    "pyright>=1.1.387",
    "ruff>=0.7.2",
    "typer>=0.12.5",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.ruff.lint]
extend-select = ["I001", "ANN001", "ANN201"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"

reportMissingTypeStubs = "none"

reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportPrivateUsage = "warning"
reportPrivateImportUsage = "warning"

reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"

reportUnnecessaryTypeIgnoreComment = "warning"

[tool.uv.sources]
surya-ocr = { git = "https://github.com/village-dev/surya.git" }
